fixed ad and  finished patch request to user

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,12 @@ code {
   
   object-fit: scale-down;
 }
+
+.ad-image{
+  margin: 10px auto;
+  display: block;
+}
+
+/* .sunglass-link{
+  color: red;
+} */
