--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ code {
   border-bottom: double black 6px;
   padding-bottom: 10px;
   padding-top: 15px;
+  font-family: didot;
 }
 
 .nav-links {
@@ -102,9 +103,10 @@ code {
 
 .about-us-text{
   text-align: center;
-  /* margin-left: auto;
-  margin-right: auto; */
   margin: 0px 25%;
+  font-family: optima;
+  font-size: 22px;
+  margin-top: 3%;
 }
 
 .float {
@@ -122,4 +124,35 @@ code {
 }
 .hideoverflow {
   overflow: hidden;
+  clear: both;
+  /* margin: 0px 5%; */
+}
+
+.form-modal {
+  margin: 0px 5%;
+}
+
+.addtocartholder {
+  text-align: center;
+}
+
+.confirmation-page {
+  text-align: center;
+  margin-top: 3%;
+}
+
+.format-forms {
+  margin: 0px 5%;
+}
+
+.product-info-cont {
+  margin: 0px 5%;
+}
+
+.desc-tag {
+  font-weight: bold;
+}
+
+.cart-margin {
+  margin: 3% 5% 0px;
 }
